@@ -1,5 +1,8 @@
           CHANGES IN SOUNDGEN VERSION 1.3.3 [...date...]
 
+MINOR:
+  * spectrogram(), getLoudness(): better temporal alignment of the waveform, spectrogram, and loudness contour
+
           CHANGES IN SOUNDGEN VERSION 1.3.2 [10-January-2019]
 MINOR:
   * soundgen(): new argument "rolloffExact" for controlling the strength of each individual harmonic in source spectrum
